force-app/unpackaged/objects/Salesforce_Modification_Request__c.object
<CustomObject>
    <fields>
        <fullName>Brief_Description__c</fullName>
        <label>Brief Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brief_Notes__c</fullName>
        <label>Brief Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Description__c</fullName>
        <label>Full Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Modification_Request__c</fullName>
        <formula>HYPERLINK(Id, Brief_Description__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modification Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolved_Date_Time__c</fullName>
        <label>Resolved Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Resolved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resolved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Response_Date_Time__c</fullName>
        <label>Response Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SF_Feature_ID_18_digit__c</fullName>
        <formula>CASESAFEID(Salesforce_Feature__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF Feature ID (18-digit)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Modification_Request_ID_18_digit__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF Modification Request ID (18-digit)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Requirement_ID_18_digit__c</fullName>
        <formula>CASESAFEID(Salesforce_Requirement__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF Requirement ID (18-digit)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce Feature</label>
        <referenceTo>Salesforce_Feature__c</referenceTo>
        <relationshipLabel>Salesforce Modification Requests</relationshipLabel>
        <relationshipName>Salesforce_Modification_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce Requirement</label>
        <referenceTo>Salesforce_Requirement__c</referenceTo>
        <relationshipLabel>Salesforce Modification Requests</relationshipLabel>
        <relationshipName>Salesforce_Modification_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Modification_Status_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Video_Link__c</fullName>
        <label>Video Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WM_Modification_ID_18_digit__c</fullName>
        <label>WM Modification ID (18-digit)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WM_Project_Task_ID_18_digit__c</fullName>
        <label>WM Project Task ID (18-digit)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WM_Requirement_ID_18_digit__c</fullName>
        <label>WM Requirement ID (18-digit)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Salesforce Modification Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Brief_Description__c</columns>
        <columns>Video_Link__c</columns>
        <columns>Full_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Brief_Notes__c</columns>
        <columns>Salesforce_Feature__c</columns>
        <columns>Salesforce_Requirement__c</columns>
        <columns>Resolved__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Unresolved_Modifications</fullName>
        <columns>Brief_Description__c</columns>
        <columns>Video_Link__c</columns>
        <columns>Full_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Brief_Notes__c</columns>
        <columns>Salesforce_Feature__c</columns>
        <columns>Salesforce_Requirement__c</columns>
        <columns>Resolved__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Canceled by Client,Not Possible</value>
        </filters>
        <label>Unresolved Modifications</label>
    </listViews>
    <nameField>
        <displayFormat>SFMR-{YYYY}{MM}{DD}-{000000000}</displayFormat>
        <label>Salesforce Modification Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Modification Requests</pluralLabel>
    <recordTypes>
        <fullName>Feature_Modification</fullName>
        <active>true</active>
        <label>Feature Modification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Requirement_Modification</fullName>
        <active>true</active>
        <label>Requirement Modification</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>